# olympics

./: .ruff.toml  README.md  pyproject.toml
.github/workflows/: python-tests.yml
olympics/: __main__.py  db.py
tests/: test_api.py  test_cli.py  test_db.py  test_main.py
