[tool.setuptools]
packages = []

[tool.pytest.ini_options]
addopts = "-v --cov"

[tool.coverage.run]
branch = true
include = ["olympics/*", "tests/*"]

[project]
name = 'olympics'
version = '0.1'
requires-python = '>=3.10'
dependencies = [
  'pytest',
  'rich',
  'fastapi[standard]', 
  'pytest-cov',
]
