[tool.setuptools]
packages = []

[tool.pytest.ini_options]
addopts = "-v --cov=olympics --cov=tests --cov-report=term-missing"

[tool.coverage.run]
include = ["olympics/*", "tests/*"]

[project]
name = 'olympics'
version = '0.1'
requires-python = '>=3.10'
dependencies = [
  'pytest',
  'rich',
  'fastapi[standard]', 
  'pytest-cov',
]
